Quorum3/Library/Tests/TypeChecker/Pass/PrimitiveTextGetValue.quorum
class Main
    action Main
        text t = "5"
        output t:GetValue()
    end
end