Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjTextWrapped.quorum
class main
    action Main
        Integer i = "text"
    end
end